--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "3000:3000"
     environment:
+      - APP_PORT=3000
       - DB_HOST=database
       - DB_USER=postgres
       - DB_PASS=password
